TestNeha/force-app/main/default/objects/Account/fields/Acc_Activation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Acc_Activation_Summary__c</fullName>
    <label>Acc Activation Summary</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>