TestNeha/force-app/main/default/objects/Account/fields/Active_Bool__c.field-meta.xml
<CustomField>
    <fullName>Active_Bool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active_Bool</label>
    <type>Checkbox</type>
</CustomField>