TestNeha/force-app/main/default/objects/Account/fields/Comp_Email__c.field-meta.xml
<CustomField>
    <fullName>Comp_Email__c</fullName>
    <label>Comp_Email</label>
    <type>Email</type>
</CustomField>